# rocket-web-apis

./: Cargo.toml  README.md
back-end/: .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml
back-end/migrations/2022-08-09-123942_users/: up.sql
back-end/migrations/2022-08-09-185810_posts/: up.sql
back-end/src/: main.rs  schema.rs
back-end/src/models/: schema.rs
back-end/src/models/user/: auth.rs  user_model.rs
back-end/src/repository/: mod.rs
src/: main.rs
