[package]
name = "rocket-web-apis"
version = "0.1.0"
authors = ["Sasan Zare <sasanzare75@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = "1.0.142"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4"
diesel_cli = "1.4.1"
jwt = "0.16.0"